<resources>
    <string name="app_name">KFamily</string>

    <!-- main activity menu -->
    <string name="main_menu1">내 인맥</string>
    <string name="main_menu2">소식 &amp; 정보</string>
    <string name="main_menu3">가이드</string>
    <string name="main_menu4">사용자 의견</string>

    <!-- bottom navigation bar items -->
    <string name="title_activity_my_home">MyHomeActivity</string>
    <string name="title_record">기록</string>
    <string name="title_calendar">일정</string>
    <string name="title_todo">할일</string>
    <string name="title_pictures">사진</string>
    <string name="title_family">가족</string>

    <!-- TODO: Remove or change this placeholder content -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- write record activity -->
    <string name="writerecord_write">공유할 내용을 입력하세요</string>

    <!-- 나의홈 -->
    <string name="title_myhome">나의 홈</string>

    <!-- calendar -->
    <!--<string name="example_3_dialog_delete_confirmation">Delete this event?</string>-->
    <string name="example_3_dialog_delete_confirmation">삭제하시겠습니까?</string>
    <!--<string name="example_3_input_dialog_title">Enter event title</string>-->
    <string name="example_3_input_dialog_title">일정 추가</string>
    <!--<string name="delete">Delete</string>-->
    <string name="delete">삭제</string>
    <!--<string name="close">Close</string>-->
    <string name="close">취소</string>
    <!--<string name="save">Save</string>-->
    <string name="save">저장</string>

    <string name="example_3_title">Example 3</string>
    <string name="example_3_subtitle">Event style implementation, day labels as header view, single selection, month scroll listener. Similar to what is in the Google Calendar app.</string>
    <string name="example_3_empty_input_text">Text is empty</string>

    <!-- firebase client id-->
    <!--<string name="default_web_client_id">337047882303-k40rhjnuloodrp298le3oslsvpounhce.apps.googleusercontent.com</string>-->


    <!-- Profile Activity -->
    <string name="profile_name">이름</string>
    <string name="profile_hocing">호칭</string>
    <string name="profile_phone">전화번호</string>
    <string name="profile_email">이메일</string>
    <string name="profile_anniversary">기념일</string>
    <string name="profile_save">완료</string>
    <string name="profile_title">프로필</string>
    <!-- Profile Anniversary Item -->
    <string name="profile_birth">생일</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
